<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amine.proglearn.connexion">



    <ImageView
        android:id="@+id/bgapp"
        android:layout_width="550dp"
        android:layout_height="210dp"

        android:scaleType="fitXY"
        android:src="@drawable/bgapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/clover"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginRight="230dp"
        android:elevation="6dp"
        android:src="@drawable/clover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/texthome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:elevation="6dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ct1"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ct2"
            android:textColor="#FFF"

            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/textsplash"
        android:layout_width="290dp"
        android:layout_height="519dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ct10"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_inscription"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/iconfinder_male3_403019" />


            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/iconfinder_camera_1287535"
                android:onClick="importImageInscription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ct11" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_user_1287507" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/edit_rond"
                android:ems="10"

                android:hint="@string/ct12"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_user_1287507" />

            <EditText
                android:id="@+id/prenom"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/edit_rond"
                android:ems="10"

                android:hint="@string/ct13"
                android:inputType="textEmailAddress" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_calendar_1287530" />

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:background="@drawable/edit_rond"
                android:ems="10"
                android:hint="@string/ct22"
                android:inputType="number" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_mail_1287521" />


            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/edit_rond"
                android:ems="10"

                android:hint="@string/ct4"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_stack_1287510" />


            <EditText
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/edit_rond"
                android:ems="10"

                android:hint="Type student"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/iconfinder_unlock_1287508" />

            <EditText
                android:id="@+id/motdepass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/edit_rond"
                android:ems="10"
                android:hint="@string/ct5"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Inscription"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edit_button"
                android:onClick="Inscription"
                android:text="@string/ct10"
                android:textAllCaps="false"
                android:textColor="#fff" />


            <Button
                android:id="@+id/annuler"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edit_button"

                android:text="@string/ct14"
                android:textAllCaps="false"

                android:textColor="#fff" />


        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
